--- a/templates/accounts/user_form.html
+++ b/templates/accounts/user_form.html
@@ -15,6 +15,7 @@
                         <div class="control-group">
                             <div class="controls">
                                 <button type="submit" class="btn">Update</button>
+                                <a class="btn btn-primary" href="{% url 'detail' request.user %}" role="button">Back</a>
                             </div>
                         </div>
                     </form>
