--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,11 @@
                             <span class="word2">Crowd</span>
                         </h1>
                         <hr class="brace">
-<p>Have you ever wanted to work in an environment that value their workforce? Have you ever wanted to look classy while you do it? Now you can!</p>
+                        <p>Have you ever wanted to work in an environment that value their workforce? Have you ever
+                            wanted to look classy while you do it? Now you can!</p>
 
-      <p>This platform uses advanced machine learning techniques to give you control over what you are doing.</p>
+                        <p>This platform uses advanced machine learning techniques to give you control over what you are
+                            doing.</p>
 
 
                         <div class="button-get-started">
@@ -31,5 +33,78 @@
             </div>
         </div>
     </div>
+    <section class="section section-orange section-our-team-freebie">
+        <div class="container">
+            <div class="content">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>
+                            How does it work?
+                        </h1>
+                        <hr class="brace">
+                        <p>Have you ever wanted to work in an environment that value their workforce? Have you ever
+                            wanted to look classy while you do it? Now you can!</p>
+
+                        <p>This platform uses advanced machine learning techniques to give you control over what you are
+                            doing.</p>
+                    </div>
+
+                </div>
+                <div class="team">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card card-member">
+                                        <div class="content">
+                                            <div class="avatar avatar-danger">
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_1.jpg">
+                                            </div>
+                                            <div class="description">
+                                                <h3 class="title">Worker</h3>
+                                                <p class="small-text">Get's the job done</p>
+                                                <p class="description"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card card-member">
+                                        <div class="content">
+                                            <div class="avatar avatar-danger">
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_4.jpg">
+                                            </div>
+                                            <div class="description">
+                                                <h3 class="title">Task</h3>
+                                                <p class="small-text">Job needs to be done</p>
+                                                <p class="description"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card card-member">
+                                        <div class="content">
+                                            <div class="avatar avatar-danger">
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_3.jpg">
+                                            </div>
+                                            <div class="description">
+                                                <h3 class="title">Explicit Feedback</h3>
+                                                <p class="small-text">Prefernce of the worker</p>
+                                                <p class="description"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
 
 {% endblock %}
