--- a/templates/workinterface/answer.html
+++ b/templates/workinterface/answer.html
@@ -59,6 +59,7 @@
                                 </select>
                             </div>
                             <input type="submit" value="Submit" class="btn btn-fill btn-black"/>
+                            <a class="btn btn-primary" href="{% url 'work' %}" role="button">Back</a>
                         </form>
                     </div>
                 </div>
