--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -20,6 +20,7 @@
 
                     <div class="col-sm-12">
                         <a class="btn btn-primary" href="{% url 'update' %}" role="button">My Info</a>
+                        <a class="btn btn-primary" href="{% url 'work' %}" role="button">Back</a>
                         <!-- Your Stuff: Custom user template urls -->
                     </div>
 
