Fixed cube server

--- a/templates/crowdcur/stat_dashboard.html
+++ b/templates/crowdcur/stat_dashboard.html
@@ -54,7 +54,7 @@
         $(document).ready(function () {
 
             //var cubesUrl = prompt ("Enter your Cubes Server URL\n(or try http://cubesdemo.cubesviewer.com)", "http://localhost:5000");
-            var cubesUrl = "http://localhost:5000";
+            var cubesUrl = "http://crowdcur.com:5000";
 
             cubesviewerStudio.init({
                 cubesUrl: cubesUrl,
