Fixed cube server

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,9 @@
                             <span class="word2">Crowd</span>
                         </h1>
                         <hr class="brace">
-                        <p>Have you ever wanted to work in an environment that value their workforce? Have you ever
-                            wanted to look classy while you do it? Now you can!</p>
+                        <p>Welcome to CrowdCur! CrowdCur is designed by developing principled data analytics algorithms to optimize workers' performance, which is of paramount importance to improve many key processes in a crowdsourcing platform.</p>
 
-                        <p>This platform uses advanced machine learning techniques to give you control over what you are
-                            doing.</p>
+                        <p>CrowdCur promotes a worker-centric environment that allows the workers to observe and monitor their own performance over time, select tasks, elicit their explicit preferences, run and obtain interesting statistics on the fellow workers. </p>
 
 
                         <div class="button-get-started">
@@ -42,11 +40,9 @@
                             How does it work?
                         </h1>
                         <hr class="brace">
-                        <p>Have you ever wanted to work in an environment that value their workforce? Have you ever
-                            wanted to look classy while you do it? Now you can!</p>
+                        <p>There are three components in our environment.</p>
 
-                        <p>This platform uses advanced machine learning techniques to give you control over what you are
-                            doing.</p>
+
                     </div>
 
                 </div>
